// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should render correctly 1`] = `
<div>
  <div
    class="modal hide"
    data-testid="modal"
  />
</div>
`;

exports[`NavBar component should render correctly 1`] = `
<div>
  <ul
    id="navBar"
  >
    <li>
      <a
        href="/"
      >
        <img
          id="logo-image"
          src="../icons/logo2.png"
        />
        <span
          id="logo-text"
        >
          Brew Day!
        </span>
      </a>
    </li>
    <li>
      <a
        href="/ricette"
      >
        Ricette
      </a>
    </li>
    <li>
      <a
        href="/birre"
      >
        Birre
      </a>
    </li>
    <li>
      <a
        href="/inventario"
      >
        Inventario
      </a>
    </li>
    <li>
      <a
        href="/spesa"
      >
        Spesa
      </a>
    </li>
  </ul>
</div>
`;

exports[`QuantityInput component should render correctly 1`] = `
<div>
  <input
    data-testid="quantity-input"
    id="shoppingItemId"
    name="shoppingItemId"
    value=""
  />
</div>
`;

exports[`RecipeDelete component should render correctly 1`] = `
<div>
  <h1>
    name
  </h1>
  <p>
    description
  </p>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler rimuovere la ricetta?
  </button>
</div>
`;

exports[`RecipeEdit component should render correctly 1`] = `
<div>
  <center>
    <table
      class="myTable"
    >
      <tbody>
        <tr>
          <td>
             
            <p>
              Nome Ricetta:
            </p>
             
          </td>
          <td>
            <input
              id="nameTextArea"
              style="width: 80%;"
              value="name"
            />
          </td>
          <td>
            <button>
              V
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <table
      class="myTable"
    >
      <tbody>
        <tr>
          <td>
            <p>
              Descrizione:
            </p>
          </td>
          <td>
            <textarea
              id="descriptionTextArea"
              style="width: 80%;"
            >
              description
            </textarea>
          </td>
          <td>
            <button>
              V
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <table
      class="myTable"
    >
      <thead>
        <tr>
          <th
            width="30%"
          >
            Nome
          </th>
          <th
            width="30%"
          >
            Quantità
          </th>
          <th
            width="30%"
          >
            Azioni
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            name
          </td>
          <td>
            <input
              style="width: 50%; text-align: center;"
              type="text"
              value="0"
            />
          </td>
          <td>
            <button>
              V
            </button>
            <button>
              X
            </button>
          </td>
        </tr>
        <tr>
          <td>
            luppoli
          </td>
          <td>
            <input
              style="width: 50%; text-align: center;"
              type="text"
              value="1"
            />
          </td>
          <td>
            <button>
              V
            </button>
            <button>
              X
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <input
              style="width: 50%; text-align: center;"
              type="text"
              value=""
            />
          </td>
          <td>
            <input
              style="width: 50%; text-align: center;"
              type="text"
              value=""
            />
          </td>
          <button>
            V
          </button>
        </tr>
      </tbody>
    </table>
  </center>
</div>
`;

exports[`RecipeExecute component should render correctly 1`] = `
<div>
  <div>
    <center>
      <h1>
         
        name
      </h1>
      <p>
         
        description
         
      </p>
      <table
        class="myTable"
      >
        <thead>
          <tr>
            <th
              width="25%"
            >
              Immagine
            </th>
            <th
              width="25%"
            >
              Nome
            </th>
            <th
              width="25%"
            >
              Quantità
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <img
                class="shoppingImage"
                src="../../icons/inventory-icons/name.png"
              />
            </td>
            <td>
              name
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              <img
                class="shoppingImage"
                src="../../icons/inventory-icons/luppoli.png"
              />
            </td>
            <td>
              luppoli
            </td>
            <td>
              1
            </td>
          </tr>
        </tbody>
      </table>
    </center>
  </div>
  <button
    class="recipeButton"
  >
    Sei sicuro di voler eseguire la ricetta?
  </button>
</div>
`;

exports[`RecipeView component should render correctly 1`] = `
<div>
  <center>
    <h1>
       
      name
    </h1>
    <p>
       
      description
       
    </p>
    <table
      class="myTable"
    >
      <thead>
        <tr>
          <th
            width="25%"
          >
            Immagine
          </th>
          <th
            width="25%"
          >
            Nome
          </th>
          <th
            width="25%"
          >
            Quantità
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <img
              class="shoppingImage"
              src="../../icons/inventory-icons/name.png"
            />
          </td>
          <td>
            name
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            <img
              class="shoppingImage"
              src="../../icons/inventory-icons/luppoli.png"
            />
          </td>
          <td>
            luppoli
          </td>
          <td>
            1
          </td>
        </tr>
      </tbody>
    </table>
  </center>
</div>
`;
